--- a/VR_v2/build.gradle
+++ b/VR_v2/build.gradle
@@ -17,10 +17,8 @@ allprojects {
     repositories {
         // For GVR components, the official source of the .aars is JCenter.
         jcenter()
-        maven {
-            // For Android support library components.
-            url "https://maven.google.com"
-        }
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://tokbox.bintray.com/maven' }
         // You can also use a local Maven repository if desired.
         mavenLocal()
     }
