--- a/VR/app/build.gradle
+++ b/VR/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
 
     compile 'com.opentok.android:opentok-android-sdk:2.12.0'
     compile 'pub.devrel:easypermissions:0.4.0'
+    compile 'com.android.volley:volley:1.0.0' // text signaling
 }
